fix: error message alignment

--- a/frontend/src/pages/Create/styles.scss
+++ b/frontend/src/pages/Create/styles.scss
@@ -43,6 +43,10 @@
     max-height: 500px;
     width: 90%;
 
+    .error{
+      align-self: center;
+    }
+
     .buttons-container {
       display: flex;
       flex-direction: row;
